--- a/themes/simple/layouts/_default/baseof.html
+++ b/themes/simple/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="{{ "/" | relURL }}">{{ .Site.Title }}</a>
+        <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
         <div class="nav-links">
             <a href="{{ "tutorials/" | relURL }}">Tutorials</a>
             <a href="https://twitter.com/boxiangliu" target="_blank">Twitter</a>
